# seq2seq

./: README.md  main.py  pyproject.toml
conf/: config.yaml
src/: config.py  data.py  model.py
